Docs : Hide floor tabpanel

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
         <!-- floor -->
         <h3 class="a11y-hidden" title="탭패널">바닥/마루</h3>
-        <div role="tabpanel" id="floor-panel" class="main__tabpanel" aria-labelledby="floor-tab" tabindex="0">
+        <div role="tabpanel" id="floor-panel" class="main__tabpanel" aria-labelledby="floor-tab" tabindex="0" hidden>
             <ul class="tabpanel__list">
                 <li class="tabpanel__list-item">
                     <a href="#" title="마루 보수">
@@ -269,7 +269,7 @@
         <!-- door-window -->
         <h3 class="a11y-hidden" title="탭패널">문/창문</h3>
         <div role="tabpanel" id="door-window-panel" class="main__tabpanel" aria-labelledby="door-window-tab"
-            tabindex="0">
+            tabindex="0" hidden>
             <ul class="tabpanel__list">
                 <li class="tabpanel__list-item">
                     <a href="#" title="블라인드/커튼 설치 수리">
